<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">sdk</string>
    <string name="app_platform_key">ATBEAiBVaDH41tKl8vAM9G3UA/F/EXpJrOSy+lQaw+kPQZC+jgIgRaxGx/Ir3zt/RrXBBi/LROmWnjwxFB5we6GQ4ixspbNfdcwbZXBvbmEsc2V0VGVtcG9yYXJ5QXV0b0JyaWdodG5lc3NBZGp1c3RtZW50LHNldFJpbmdlck1vZGVJbnRlcm5hbCxTZXR0aW5ncy5TZWN1cmUsU2V0dGluZ3MuU3lzdGVtYAAAAA==</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audit_mode_warning_content">%1$s 该模式仅限内部人员测试使用，此功能可能会上报您的个人信息（包括但不限于IMEI）用于系统功能测试，请谨慎选择是否进入。</string>
    <string name="audit_mode_warning_title">注意</string>
    <string name="beauty3d_add_hint">Add 3D Face Beauty</string>
    <string name="beauty3d_beauty_face">3D Face Beauty</string>
    <string name="beauty3d_cancel">Cancel</string>
    <string name="beauty3d_cheekbones">Cheekbone</string>
    <string name="beauty3d_chin">Chin</string>
    <string name="beauty3d_continue_turn_to_left">Please continue turning your head left</string>
    <string name="beauty3d_continue_turn_to_right">Please continue turning your head right</string>
    <string name="beauty3d_customize_face">Custom Beautifying</string>
    <string name="beauty3d_customize_hint">Tap your facial features for minor adjustments</string>
    <string name="beauty3d_customize_success">Custom 3D Beautified Look Completed</string>
    <string name="beauty3d_delete">Delete</string>
    <string name="beauty3d_eye">Big Eyes</string>
    <string name="beauty3d_face_blurred">Blurred face image. Please don\'t sway your head when recording</string>
    <string name="beauty3d_face_change">Face has changed</string>
    <string name="beauty3d_face_closer">Please keep your face and the phone closer</string>
    <string name="beauty3d_face_edit_title">Facial Analysis</string>
    <string name="beauty3d_face_farther">Please keep your face and the phone farther</string>
    <string name="beauty3d_face_scan">Face Scan</string>
    <string name="beauty3d_face_size">Face Shape</string>
    <string name="beauty3d_face_style_delicate">Delicacy</string>
    <string name="beauty3d_face_style_lolita">Loli</string>
    <string name="beauty3d_face_style_mode">Model</string>
    <string name="beauty3d_face_style_natural">Natural</string>
    <string name="beauty3d_give_up_customize_face">Discard Custom 3D Beautified Look</string>
    <string name="beauty3d_goose_face">Oval Face</string>
    <string name="beauty3d_guide_content">Smart face scanning can easily 3D beautify your face</string>
    <string name="beauty3d_high_cheekbone">Higher</string>
    <string name="beauty3d_inconsistent_feature">Inconsistent facial features</string>
    <string name="beauty3d_keep_face_forward">Please align your front face with the frame</string>
    <string name="beauty3d_keep_face_in_cicle">Your face is out of the frame. Please keep your face inside it</string>
    <string name="beauty3d_keep_one_face">Please make sure only one face is inside the frame at a time</string>
    <string name="beauty3d_light_dim">The light is too dim. Please retry under normal lighting;</string>
    <string name="beauty3d_long_chin">Longer</string>
    <string name="beauty3d_long_face">Longer Face</string>
    <string name="beauty3d_narrow_nose">Narrower Nose</string>
    <string name="beauty3d_no_face">Face detection failed</string>
    <string name="beauty3d_no_face_exit">No face detected. Scanning ended</string>
    <string name="beauty3d_no_show_teeth">Please don\'t show your teeth</string>
    <string name="beauty3d_nose">Nose</string>
    <string name="beauty3d_orientatin_error_keep_vertical">Incorrect phone direction. Please keep it in the portrait mode</string>
    <string name="beauty3d_over_max_frame_exit">Maximum allowed number of frames exceeded. Scanning ended.</string>
    <string name="beauty3d_pelease_remove_glasses">Please remove your glasses</string>
    <string name="beauty3d_program_error_exit">Program error. Scanning ended.</string>
    <string name="beauty3d_rescan">Scan Again</string>
    <string name="beauty3d_rotate_head">Rotate your head slowly and maintain the same look throughout the process</string>
    <string name="beauty3d_round_face">Round Face</string>
    <string name="beauty3d_save">Save</string>
    <string name="beauty3d_save_face_failed">Failed to keep facial data</string>
    <string name="beauty3d_scan_content">Remove your glasses, and make sure your hair does not cover any part of your face. Place your front face inside the frame, and slowly rotate your head until scanning finishes.</string>
    <string name="beauty3d_short_chin">Shorter</string>
    <string name="beauty3d_skip">Skip</string>
    <string name="beauty3d_small_eye">Smaller Eyes</string>
    <string name="beauty3d_square_face">Square Face</string>
    <string name="beauty3d_standard_cheekbone">Standard</string>
    <string name="beauty3d_standard_chin">Standard</string>
    <string name="camera_ai_enhancement_video_default_value">off</string>
    <string name="camera_ai_enhancement_video_title">AI Enhancement Night Function</string>
    <string name="camera_blur_title">Blur</string>
    <string name="camera_description_high_resolution">Extra HD</string>
    <string name="camera_description_switch_dual_camera">Dual Camera Switching</string>
    <string name="camera_filter_menu_default_value">off</string>
    <string name="camera_filter_title">Filter</string>
    <string name="camera_flash_mode_default_value">off</string>
    <string name="camera_flash_mode_title">Flash Mode</string>
    <string name="camera_flash_mode_video_default_value">off</string>
    <string name="camera_format_default_value">jpg</string>
    <string name="camera_group_type_icon_item">3</string>
    <string name="camera_group_type_menu_expandable">2</string>
    <string name="camera_group_type_share_resource">1</string>
    <string name="camera_hdr_title">HDR Function</string>
    <string name="camera_high_resolution_default_value">off</string>
    <string name="camera_intelligent_high_frame_default_selected">on</string>
    <string name="camera_intelligent_high_frame_selected_title">high frame open</string>
    <string name="camera_more_title">More</string>
    <string name="camera_multicamera_type_default">off</string>
    <string name="camera_multicamera_type_title">multi camera type</string>
    <string name="camera_night_tripod_mode_default_value">off</string>
    <string name="camera_night_tripod_mode_title">tripod mode</string>
    <string name="camera_photo_ratio_default_value">standard</string>
    <string name="camera_pi_ai_default_value">off</string>
    <string name="camera_pi_ai_scenes_title">AI scene enhancement</string>
    <string name="camera_pi_title">Dazzle Color</string>
    <string name="camera_portrait_blur_menu_default_value">on</string>
    <string name="camera_portrait_new_style_default_value">off</string>
    <string name="camera_portrait_new_style_title">portrait new style</string>
    <string name="camera_raw_control_default_value">off</string>
    <string name="camera_raw_control_title">raw open</string>
    <string name="camera_raw_title">RAW</string>
    <string name="camera_setting_default_value">off</string>
    <string name="camera_setting_menu_description_slow_video_fps_title">SLO-MO FPS</string>
    <string name="camera_setting_submenu_high_resolution">%1$1.0f MP</string>
    <string name="camera_setting_submenu_photo_ratio">Frame</string>
    <string name="camera_setting_submenu_tilt_shift">Tilt-shift</string>
    <string name="camera_setting_submenu_timer">Timer</string>
    <string name="camera_setting_title">Setting</string>
    <string name="camera_shutter_mode_default_value">normal</string>
    <string name="camera_slogan_apply_photo">Add to photos</string>
    <string name="camera_slogan_apply_video">Add to videos</string>
    <string name="camera_slogan_customize">Custom</string>
    <string name="camera_slogan_default_value">off</string>
    <string name="camera_slogan_device">Phone model</string>
    <string name="camera_slow_video_mode_frame_default_value">off</string>
    <string name="camera_slow_video_mode_frame_title">slow mode frame</string>
    <string name="camera_starry_mode_default_value_realme">off</string>
    <string name="camera_super_raw_control_title">super raw open</string>
    <string name="camera_switch_default_value">camera_main</string>
    <string name="camera_switch_dual_camera_default_value">off</string>
    <string name="camera_switch_title">Switch Camera</string>
    <string name="camera_tilt_shift_blur_menu_default_value">on</string>
    <string name="camera_tilt_shift_default_value">off</string>
    <string name="camera_torch_mode_default_value">auto</string>
    <string name="camera_torch_mode_title">Fill light mode</string>
    <string name="camera_ultra_night_video_default_value">off</string>
    <string name="camera_ultra_night_video_title">Video Night Function</string>
    <string name="camera_video_blur_menu_default_value">off</string>
    <string name="camera_video_hdr_default_value">off</string>
    <string name="camera_video_hdr_title">Video HDR Function</string>
    <string name="camera_video_hyper_lapse_default_value">off</string>
    <string name="camera_video_hyper_lapse_title">Hyperlapse</string>
    <string name="camera_video_super_eis_default_value">off</string>
    <string name="camera_video_super_eis_title">Super EIS</string>
    <string name="camera_vivid_effect_off">off</string>
    <string name="camera_vivid_effect_title">Vivid</string>
    <string name="starry_mode_title_realme">Starry Mode</string>
    <string name="support_abc_searchview_description_clear">Clear query</string>
    <string name="support_abc_searchview_description_search">Search</string>
    <string name="support_abc_searchview_description_submit">Submit query</string>
    <string name="support_abc_searchview_description_voice">Voice search</string>
    <string name="ultra_high_resolution_function_default_value">off</string>
    <string name="video_filter_default_value">off</string>
    <string name="video_filter_title">video filter</string>
</resources>