<?xml version="1.0" encoding="utf-8"?>
<PreferenceMenuOptionGroup xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <PreferenceMenuOptionInfo app:contentDes="@array/flash_mode_names" app:default_value="@string/camera_flash_mode_default_value" app:groupType="@string/camera_group_type_share_resource" app:icons="@array/flash_mode_icons" app:key="pref_camera_flashmode_key" app:title="@string/camera_flash_mode_title" app:valueNames="@array/flash_mode_names" app:values="@array/flash_mode_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/hdr_names" app:icons="@array/hdr_icons" app:key="pref_camera_hdr_mode_key" app:title="@string/camera_hdr_title" app:valueNames="@array/hdr_names" app:values="@array/hdr_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/night_tripod_mode_names" app:default_value="@string/camera_night_tripod_mode_default_value" app:icons="@array/night_tripod_mode_icons" app:key="pref_night_tripod_mode_key" app:onoff="true" app:title="@string/camera_night_tripod_mode_title" app:valueNames="@array/night_tripod_mode_names" app:values="@array/night_tripod_mode_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/camera_video_hyper_lapse_values" app:default_value="@string/camera_video_hyper_lapse_default_value" app:icons="@array/camera_video_hyper_lapse_icons" app:key="pref_video_hyper_lapse_key" app:onoff="true" app:title="@string/camera_video_hyper_lapse_title" app:valueNames="@array/camera_video_hyper_lapse_names" app:values="@array/camera_video_hyper_lapse_values"/>
    <PreferenceMenuOptionInfo app:close_animation_icon="@drawable/menu_pi_ai_circle" app:contentDes="@array/pi_ai_names" app:default_value="@string/camera_pi_ai_default_value" app:icons="@array/pi_ai_icons" app:key="pref_camera_pi_ai_mode_key" app:onoff="true" app:open_animation_icon="@drawable/menu_pi_ai_bg" app:title="@string/camera_pi_ai_scenes_title" app:valueNames="@array/pi_ai_names" app:values="@array/pi_ai_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/pi_names" app:icons="@array/pi_icons" app:key="pref_camera_pi_mode_key" app:onoff="true" app:title="@string/camera_pi_title" app:valueNames="@array/pi_names" app:values="@array/pi_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/vivid_names" app:default_value="@string/camera_vivid_effect_off" app:icons="@array/vivid_icons" app:key="pref_camera_vivid_effect_key" app:onoff="true" app:title="@string/camera_vivid_effect_title" app:valueNames="@array/vivid_names" app:values="@array/vivid_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/switch_camera_names" app:default_value="@string/camera_switch_default_value" app:expandIcon="@drawable/camera_switch_icon" app:groupType="@string/camera_group_type_icon_item" app:icons="@array/switch_camera_icons" app:key="pref_switch_camera_key" app:title="@string/camera_switch_title" app:valueNames="@array/switch_camera_names" app:values="@array/switch_camera_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/camera_super_raw_control_names" app:default_value="@string/camera_raw_control_default_value" app:icons="@array/super_raw_icons" app:key="pref_super_raw_control_key" app:title="@string/camera_super_raw_control_title" app:valueNames="@array/camera_super_raw_control_names" app:values="@array/camera_super_raw_control_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/camera_raw_control_names" app:default_value="@string/camera_raw_control_default_value" app:icons="@array/raw_icons" app:key="pref_raw_control_key" app:onoff="true" app:title="@string/camera_raw_control_title" app:valueNames="@array/camera_raw_control_names" app:values="@array/camera_raw_control_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/setting_names" app:default_value="@string/camera_setting_default_value" app:icons="@array/setting_icons" app:key="pref_setting_key" app:onoff="true" app:title="@string/camera_setting_title" app:valueNames="@array/setting_names" app:values="@array/setting_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/more_names" app:default_value="@string/camera_setting_default_value" app:icons="@array/more_icons" app:key="pref_subsetting_key" app:onoff="true" app:title="@string/camera_more_title" app:valueNames="@array/more_names" app:values="@array/more_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/video_flash_mode_names" app:default_value="@string/camera_flash_mode_video_default_value" app:groupType="@string/camera_group_type_share_resource" app:icons="@array/video_flash_mode_icons" app:key="pref_camera_videoflashmode_key" app:title="@string/camera_flash_mode_title" app:valueNames="@array/video_flash_mode_names" app:values="@array/video_flash_mode_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/slow_video_mode_frame_values" app:default_value="@string/camera_slow_video_mode_frame_default_value" app:icons="@array/slow_video_mode_frame_icons" app:key="key_slow_video_frame_seek_bar_menu_key" app:onoff="true" app:title="@string/camera_slow_video_mode_frame_title" app:valueNames="@array/slow_video_mode_frame_names" app:values="@array/slow_video_mode_frame_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/high_frame_selected_names" app:default_value="@string/camera_intelligent_high_frame_default_selected" app:icons="@array/high_frame_selected_icons" app:key="pref_intelligent_high_frame_selected_key" app:onoff="true" app:title="@string/camera_intelligent_high_frame_selected_title" app:valueNames="@array/high_frame_selected_names" app:values="@array/high_frame_selected_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/multicamera_type_selected_names" app:default_value="@string/camera_multicamera_type_default" app:icons="@array/multicamera_type_selected_icons" app:key="key_multicamera_type_menu_key" app:onoff="true" app:title="@string/camera_multicamera_type_title" app:valueNames="@array/multicamera_type_selected_names" app:values="@array/multicamera_type_selected_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/torch_mode_names" app:default_value="@string/camera_torch_mode_default_value" app:groupType="@string/camera_group_type_share_resource" app:icons="@array/torch_mode_icons" app:key="pref_camera_torch_mode_key" app:title="@string/camera_torch_mode_title" app:valueNames="@array/torch_mode_names" app:values="@array/torch_mode_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/raw_names" app:default_value="@string/camera_format_default_value" app:icons="@array/raw_icons" app:key="pref_raw_key" app:onoff="true" app:title="@string/camera_raw_title" app:valueNames="@array/raw_names" app:values="@array/raw_names"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/high_resulution_names" app:default_value="@string/camera_high_resolution_default_value" app:icons="@array/high_resulution_icons" app:key="pref_high_resolution_key" app:onoff="true" app:title="@string/camera_description_high_resolution" app:valueNames="@array/high_resulution_names" app:values="@array/high_resulution_names"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/switch_dual_camera_names" app:default_value="@string/camera_switch_dual_camera_default_value" app:icons="@array/switch_dual_camera_icons" app:key="pref_switch_dual_camera_key" app:onoff="true" app:title="@string/camera_description_switch_dual_camera" app:valueNames="@array/switch_dual_camera_names" app:values="@array/switch_dual_camera_names"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/blur_names" app:default_value="@string/camera_video_blur_menu_default_value" app:groupType="@string/camera_group_type_menu_expandable" app:icons="@array/blur_icons" app:key="pref_video_blur_menu" app:title="@string/camera_blur_title" app:valueNames="@array/blur_names" app:values="@array/blur_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/ultra_night_video_values" app:defaultValue="@string/camera_ultra_night_video_default_value" app:icons="@array/ultra_night_video_icons" app:key="key_ultra_night_video" app:onoff="true" app:title="@string/camera_ultra_night_video_title" app:valueNames="@array/ultra_night_video_names" app:values="@array/ultra_night_video_values"/>
    <PreferenceMenuOptionInfo app:close_animation_icon="@drawable/menu_pi_ai_circle" app:contentDes="@array/pi_ai_names" app:default_value="@string/camera_ai_enhancement_video_default_value" app:icons="@array/pi_ai_icons" app:key="key_ai_enhancement_video" app:onoff="true" app:open_animation_icon="@drawable/menu_pi_ai_bg" app:switch_icon_need_anim="true" app:title="@string/camera_ai_enhancement_video_title" app:valueNames="@array/ai_enhancement_video_names" app:values="@array/ai_enhancement_video_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/video_super_eis_names" app:default_value="@string/camera_video_super_eis_default_value" app:icons="@array/video_super_eis_icons" app:key="pref_video_super_eis_key" app:onoff="true" app:title="@string/camera_video_super_eis_title" app:valueNames="@array/video_super_eis_names" app:values="@array/video_super_eis_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/filter_names" app:default_value="@string/camera_filter_menu_default_value" app:groupType="@string/camera_group_type_menu_expandable" app:icons="@array/filter_icons" app:key="pref_filter_menu" app:title="@string/camera_filter_title" app:valueNames="@array/filter_names" app:values="@array/filter_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/video_filter_values" app:default_value="@string/video_filter_default_value" app:groupType="@string/camera_group_type_menu_expandable" app:icons="@array/video_filter_icons" app:key="pref_video_filter_menu" app:title="@string/video_filter_title" app:valueNames="@array/video_filter_names" app:values="@array/filter_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/filter_names" app:default_value="@string/camera_filter_menu_default_value" app:groupType="@string/camera_group_type_menu_expandable" app:icons="@array/filter_icons" app:key="pref_night_filter_menu" app:title="@string/camera_filter_title" app:valueNames="@array/filter_names" app:values="@array/filter_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/portrait_new_style_names" app:default_value="@string/camera_portrait_new_style_default_value" app:groupType="@string/camera_group_type_menu_expandable" app:icons="@array/portrait_new_style_icons" app:key="pref_portrait_new_style_menu" app:title="@string/camera_portrait_new_style_title" app:valueNames="@array/portrait_new_style_names" app:values="@array/portrait_new_style_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/blur_names" app:default_value="@string/camera_portrait_blur_menu_default_value" app:groupType="@string/camera_group_type_menu_expandable" app:icons="@array/blur_icons" app:key="pref_portrait_blur_menu" app:title="@string/camera_blur_title" app:valueNames="@array/blur_names" app:values="@array/blur_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/photo_ratio_values" app:default_value="@string/camera_photo_ratio_default_value" app:icons="@array/scale_icons" app:key="pref_camera_photo_ratio_key" app:title="@string/camera_setting_submenu_photo_ratio" app:valueNames="@array/scale_model_names" app:values="@array/photo_ratio_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/timer_shutter_values" app:default_value="@string/camera_shutter_mode_default_value" app:icons="@array/timer_icons" app:key="pref_camera_timer_shutter_key" app:title="@string/camera_setting_submenu_timer" app:valueNames="@array/timer_icons_model_names" app:values="@array/timer_shutter_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/ultra_high_resolution_function_values" app:defaultValue="@string/ultra_high_resolution_function_default_value" app:icons="@array/ultra_high_resolution_icons" app:key="pref_ultra_high_resolution_menu" app:onoff="true" app:title="@string/camera_description_high_resolution" app:valueNames="@array/camera_description_high_resolutions" app:values="@array/ultra_high_resolution_function_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/tilt_shift_values" app:defaultValue="@string/camera_tilt_shift_default_value" app:icons="@array/tilt_shift_icons" app:key="pref_video_timelapse_tilt_shift_key" app:onoff="true" app:title="@string/camera_setting_submenu_tilt_shift" app:valueNames="@array/tilt_shift_names" app:values="@array/tilt_shift_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/blur_names" app:default_value="@string/camera_tilt_shift_blur_menu_default_value" app:groupType="@string/camera_group_type_menu_expandable" app:icons="@array/blur_icons" app:key="pref_tilt_shift_blur_menu" app:title="@string/camera_blur_title" app:valueNames="@array/blur_names" app:values="@array/blur_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/starry_mode_names" app:default_value="@string/camera_starry_mode_default_value_realme" app:icons="@array/starry_mode_icons" app:key="pref_starry_mode_key" app:onoff="true" app:title="@string/starry_mode_title_realme" app:valueNames="@array/starry_mode_names" app:values="@array/starry_mode_names"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/slow_video_fps_names" app:expandIcon="@drawable/menu_slowvideo_fps_expand_icon" app:groupType="@string/camera_group_type_share_resource" app:icons="@array/slow_video_fps_icons" app:key="pref_platform_slow_video_fps_key" app:title="@string/camera_setting_menu_description_slow_video_fps_title" app:valueNames="@array/slow_video_fps_names" app:values="@array/slow_video_fps_values"/>
</PreferenceMenuOptionGroup>
