<?xml version="1.0" encoding="utf-8"?>
<PreferenceMenuOptionGroup xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <PreferenceMenuOptionInfo app:contentDes="@array/photo_ratio_values" app:defaultValue="@string/camera_photo_ratio_default_value" app:drawerType="0" app:icons="@array/scale_icons" app:imagetitlemode="true" app:key="pref_camera_photo_ratio_key_from_other_app" app:onoff="true" app:title="@string/camera_setting_submenu_photo_ratio" app:valueNames="@array/icon_scales" app:values="@array/photo_ratio_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/video_hdr_values" app:defaultValue="@string/camera_video_hdr_default_value" app:drawerType="1" app:icons="@array/video_hdr_icons" app:imagetitlecolorchangeable="true" app:imagetitlemode="true" app:key="key_video_hdr_from_other_app" app:onoff="true" app:title="@string/camera_video_hdr_title" app:valueNames="@array/video_hdr_names" app:values="@array/video_hdr_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/ultra_night_video_values" app:defaultValue="@string/camera_ultra_night_video_default_value" app:drawerType="1" app:icons="@array/ultra_night_video_icons" app:imagetitlecolorchangeable="true" app:imagetitlemode="true" app:key="key_ultra_night_video_from_other_app" app:onoff="true" app:title="@string/camera_ultra_night_video_title" app:valueNames="@array/ultra_night_video_names" app:values="@array/ultra_night_video_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/timer_shutter_values" app:defaultValue="@string/camera_shutter_mode_default_value" app:drawerType="0" app:icons="@array/timer_icons" app:imagetitlecolorchangeable="true" app:imagetitlemode="true" app:key="pref_camera_timer_shutter_key_from_other_app" app:onoff="true" app:title="@string/camera_setting_submenu_timer" app:valueNames="@array/icon_timers" app:values="@array/timer_shutter_values"/>
    <PreferenceMenuOptionInfo app:contentDes="@array/photo_high_resolution_values" app:defaultValue="@string/camera_photo_ratio_default_value" app:drawerType="1" app:icons="@array/high_resolution_icons" app:imagetitlecolorchangeable="true" app:imagetitlemode="true" app:key="pref_camera_high_resolution_key_from_other_app" app:onoff="true" app:title="@string/camera_setting_submenu_high_resolution" app:valueNames="@array/icon_high_resolutions" app:values="@array/photo_high_resolution_values"/>
    <PreferenceMenuOptionInfo app:defaultValue="@string/camera_setting_default_value" app:drawerType="2" app:icons="@array/setting_icons" app:imagetitlemode="true" app:key="pref_setting_key_from_other_app" app:onoff="true" app:title="@string/camera_setting_title" app:valueNames="@array/icon_settings" app:values="@array/setting_values"/>
</PreferenceMenuOptionGroup>
