<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:key="camera_setting_slogan_root_preference">
    <androidx.preference.Preference android:layout="@layout/color_preference_header" android:selectable="false"/>
    <com.color.support.preference.ColorPreferenceCategory android:key="pref_slogan_function" app:isFirstCategory="true">
        <com.android.ui.menu.CameraSwitchPreference android:persistent="true" android:title="@string/camera_slogan_device" android:key="pref_slogan_switch_key" android:defaultValue="@string/camera_slogan_default_value"/>
        <com.color.support.preference.ColorPreference android:persistent="false" android:title="@string/camera_slogan_customize" android:selectable="true" android:key="pref_slogan_customize_key" android:iconSpaceReserved="false"/>
    </com.color.support.preference.ColorPreferenceCategory>
    <PreferenceCategory android:key="pref_apply_slogan_function">
        <com.android.ui.menu.CameraSwitchPreference android:persistent="true" android:title="@string/camera_slogan_apply_photo" android:key="pref_slogan_apply_photo_key" android:defaultValue="@string/camera_slogan_default_value"/>
        <com.android.ui.menu.CameraSwitchPreference android:persistent="true" android:title="@string/camera_slogan_apply_video" android:key="pref_slogan_apply_video_key" android:defaultValue="@string/camera_slogan_default_value"/>
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
