<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="?android:attr/textColorPrimary" android:gravity="center_vertical" android:id="@+id/search_badge" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginBottom="2dp" android:drawablePadding="0dp"/>
    <color.support.v7.internal.widget.TintImageView android:layout_gravity="center_vertical" android:id="@+id/search_button" android:focusable="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:contentDescription="@string/support_abc_searchview_description_search" style="?attr/actionButtonStyle"/>
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@+id/search_edit_frame" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="0dp" android:layout_marginTop="0dp" android:layout_marginRight="0dp" android:layout_marginBottom="0dp" android:layout_weight="1" android:layoutDirection="locale">
        <color.support.v7.internal.widget.TintImageView android:layout_gravity="center_vertical" android:id="@+id/search_mag_icon" android:visibility="gone" android:layout_width="0dp" android:layout_height="wrap_content" android:scaleType="centerInside"/>
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@+id/search_plate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1">
            <view android:ellipsize="end" android:gravity="left|center_vertical|center_horizontal|center|start" android:layout_gravity="center_vertical" android:id="@+id/search_src_text" android:background="@null" android:paddingLeft="@dimen/support_abc_dropdownitem_text_padding_left" android:paddingRight="@dimen/support_abc_dropdownitem_text_padding_right" android:layout_width="0dp" android:layout_height="30dp" android:minWidth="0dp" android:singleLine="true" android:layout_weight="1" android:inputType="none|text|textAutoComplete|textNoSuggestions" android:dropDownAnchor="@+id/search_edit_frame" android:imeOptions="actionSearch" android:dropDownHeight="wrap_content" android:dropDownHorizontalOffset="0dp" android:dropDownVerticalOffset="0dp" android:textCursorDrawable="@drawable/color_search_view_cursor" android:textDirection="locale" android:textAlignment="viewStart" android:forceDarkAllowed="false" class="androidx.appcompat.widget.SearchView$SearchAutoComplete"/>
            <color.support.v7.internal.widget.TintImageView android:layout_gravity="center_vertical" android:id="@+id/search_close_btn" android:background="?attr/selectableItemBackgroundBorderless" android:paddingLeft="0dp" android:paddingRight="0dp" android:focusable="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:contentDescription="@string/support_abc_searchview_description_clear"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@+id/submit_area" android:layout_width="wrap_content" android:layout_height="match_parent">
            <color.support.v7.internal.widget.TintImageView android:layout_gravity="center_vertical" android:id="@+id/search_go_btn" android:background="?attr/selectableItemBackgroundBorderless" android:paddingLeft="16dp" android:paddingRight="16dp" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:contentDescription="@string/support_abc_searchview_description_submit"/>
            <color.support.v7.internal.widget.TintImageView android:layout_gravity="center_vertical" android:id="@+id/search_voice_btn" android:background="?attr/selectableItemBackgroundBorderless" android:paddingLeft="16dp" android:paddingRight="16dp" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:contentDescription="@string/support_abc_searchview_description_voice"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
